--- a/projeto_completo_final.ipynb
+++ b/projeto_completo_final.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4835c6ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\laism\\AppData\\Local\\Temp\\ipykernel_20860\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a0689268",
    "metadata": {},
@@ -10,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "21c9ee84",
    "metadata": {},
    "outputs": [],
@@ -8004,7 +8036,7 @@
    "source": [
     "df9 = X_test[ cols_selected_boruta_full]\n",
     "\n",
-    "#reescale -> voltando para a escala original\n",
+    "#reescale -> voltando para a escala original para calcular o erro\n",
     "df9['sales'] = np.expm1( df9['sales'])\n",
     "df9['predictions'] = np.expm1( yhat_xgb_tuned)"
    ]
@@ -8275,7 +8307,10 @@
     "\n",
     "#ordenando as colunas\n",
     "df92 = df92[['store','predictions','worst_scenario', 'best_scenario', 'MAE','MAPE']]\n",
-    "df92.sample(4)"
+    "df92.sample(4)\n",
+    "\n",
+    "# dessa forma é possível saber a sugestão que o modelo deu, o quão longe a sugestão varia do valor real \n",
+    "# e vai ter também o pior e o melhor cenário, então o stakeholder pode julgar baseando na experiência dele qual o valor mais adequado para a tomada de decisão"
    ]
   },
   {
@@ -8588,7 +8623,6 @@
     "plt.subplot(2,2,3)\n",
     "sns.distplot(df9['error'])\n",
     "\n",
-    "#\n",
     "plt.subplot(2,2,4)\n",
     "sns.scatterplot(df9['predictions'], df9['error'])"
    ]
